[gd_scene load_steps=12 format=2]

[ext_resource path="res://menus/main_menu.gd" type="Script" id=1]
[ext_resource path="res://world/bg_stars.tscn" type="PackedScene" id=2]
[ext_resource path="res://world/button.tscn" type="PackedScene" id=3]
[ext_resource path="res://menus/option_menu.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "change"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("trans:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00409365, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1500, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "options_menu"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("option_menu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1650.73, 500.911 ), Vector2( 800, 500.911 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("buttons:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 505, 350 ), Vector2( 505, 350 ), Vector2( 205, 350 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "ready"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("trans:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00409365, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1500, 0 ) ]
}

[sub_resource type="DynamicFontData" id=4]
font_path = "res://world/FFFFORWA.TTF"

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = SubResource( 4 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://world/FFFFORWA.TTF"

[sub_resource type="DynamicFont" id=7]
size = 20
use_filter = true
font_data = SubResource( 6 )

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="trans" type="Node2D" parent="."]
position = Vector2( -80.03, 0 )
z_index = 4096

[node name="ColorRect" type="ColorRect" parent="trans"]
margin_left = -103.256
margin_top = -89.6252
margin_right = 1367.74
margin_bottom = 837.375
color = Color( 0, 0, 0, 1 )

[node name="anims" type="AnimationPlayer" parent="."]
anims/change = SubResource( 1 )
anims/options_menu = SubResource( 2 )
anims/ready = SubResource( 3 )

[node name="bg_stars" parent="." instance=ExtResource( 2 )]

[node name="title" type="Label" parent="."]
margin_right = 1281.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 5 )
text = "Santa Giftrun"
align = 1
valign = 1

[node name="best" type="Label" parent="."]
margin_top = 175.0
margin_right = 1281.0
margin_bottom = 339.0
custom_fonts/font = SubResource( 5 )
text = "Best: 0"
align = 1
valign = 1

[node name="buttons" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 505, 350 )
z_index = -1
__meta__ = {
"_edit_group_": true
}

[node name="play" parent="buttons" instance=ExtResource( 3 )]
editor/display_folded = true

[node name="Label" type="Label" parent="buttons/play"]
margin_left = 1.0
margin_top = 6.0
margin_right = 250.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
text = "PLAY"
align = 1
valign = 1

[node name="options" parent="buttons" instance=ExtResource( 3 )]
editor/display_folded = true
margin_top = 100.0
margin_bottom = 190.0

[node name="Label" type="Label" parent="buttons/options"]
margin_left = 1.0
margin_top = 6.0
margin_right = 250.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
text = "OPTIONS"
align = 1
valign = 1

[node name="exit" parent="buttons" instance=ExtResource( 3 )]
editor/display_folded = true
margin_top = 200.0
margin_bottom = 290.0

[node name="Label" type="Label" parent="buttons/exit"]
margin_left = 1.0
margin_top = 6.0
margin_right = 250.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
text = "EXIT"
align = 1
valign = 1

[node name="option_menu" parent="." instance=ExtResource( 4 )]
position = Vector2( 1650.73, 500.911 )
z_index = -1
[connection signal="animation_finished" from="anims" to="." method="_on_anims_animation_finished"]
[connection signal="pressed" from="buttons/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="buttons/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="buttons/exit" to="." method="_on_exit_pressed"]
